--- a/RevisionesApp/app/src/main/res/layout/item_equipo.xml
+++ b/RevisionesApp/app/src/main/res/layout/item_equipo.xml
@@ -1,9 +1,9 @@
-<!-- item_equipo_table_row.xml -->
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/idEquipoTextView"
@@ -28,7 +28,5 @@
         android:layout_weight="1"
         android:textSize="16sp"
         android:padding="4dp"/>
-
-    <!-- Agrega más TextViews según sea necesario para otros atributos -->
 
 </LinearLayout>
