Fragment Scanner y toolbar arreglada

--- a/RevisionesApp/app/src/main/res/layout/activity_main.xml
+++ b/RevisionesApp/app/src/main/res/layout/activity_main.xml
@@ -54,5 +54,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnIncidencias" />
 
+    <fragment
+        android:id="@+id/scannerFragment"
+        android:name="com.pfc.android.revisionesapp.activities.ScannerFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/btnEquipos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
