--- a/RevisionesApp/app/src/main/res/layout/item_equipo.xml
+++ b/RevisionesApp/app/src/main/res/layout/item_equipo.xml
@@ -10,16 +10,20 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:padding="4dp"
         android:textSize="16sp"
-        android:padding="4dp"/>
+        android:singleLine="true"
+        android:ellipsize="end"/>
 
     <TextView
         android:id="@+id/nombreEquipoTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:padding="4dp"
         android:textSize="16sp"
-        android:padding="4dp"/>
+        android:maxLines="3"
+        android:ellipsize="end"/>
 
     <TextView
         android:id="@+id/tipoProductoEquipoTextView"
@@ -27,6 +31,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textSize="16sp"
-        android:padding="4dp"/>
+        android:padding="4dp"
+        android:singleLine="true"
+        android:ellipsize="end"/>
 
 </LinearLayout>
