--- a/RevisionesApp/app/src/main/res/layout/fragment_inicio.xml
+++ b/RevisionesApp/app/src/main/res/layout/fragment_inicio.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.InicioFragment">
+    tools:context=".fragments.InicioFragment"
+    android:id="@+id/inicioFragment">
 
     <Button
         android:id="@+id/btnEquipos"
