Incidencias GET, PUT

--- a/RevisionesApp/app/src/main/res/layout/card_incidencia.xml
+++ b/RevisionesApp/app/src/main/res/layout/card_incidencia.xml
@@ -2,10 +2,10 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:card_view="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardViewIncidencia"
     android:layout_margin="12dp"
-    card_view:cardBackgroundColor="#009688"
+    card_view:cardBackgroundColor="@color/teal_200"
     card_view:cardCornerRadius="20dp"
     card_view:elevation="6dp"
     card_view:contentPadding="4dp">
@@ -29,7 +29,7 @@
             android:id="@+id/item_titulo"
             android:text="Titulo"
             android:textSize="24sp"
-            android:textColor="#FFFFFF"
+            android:textColor="#000000"
             android:textStyle="bold"
             android:layout_toEndOf="@id/item_imagen"
             android:layout_toRightOf="@id/item_imagen"
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/item_detalle"
             android:text="Detalles"
-            android:textColor="#FFFFFF"
+            android:textColor="#000000"
             android:textStyle="bold"
             android:layout_toEndOf="@id/item_imagen"
             android:layout_toRightOf="@id/item_imagen"
