--- a/RevisionesApp/app/src/main/res/layout/fragment_incidencias.xml
+++ b/RevisionesApp/app/src/main/res/layout/fragment_incidencias.xml
@@ -7,7 +7,7 @@
     tools:context=".fragments.IncidenciasFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerIncidencias"
+        android:id="@+id/incidenciasRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
