--- a/RevisionesApp/app/src/main/res/layout/fragment_inicio.xml
+++ b/RevisionesApp/app/src/main/res/layout/fragment_inicio.xml
@@ -5,15 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.InicioFragment"
-    android:id="@+id/inicioFragment"
-    android:background="#0712DA">
+    android:id="@+id/inicioFragment">
 
     <Button
         android:id="@+id/btnEquipos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="irAEquiposFragment"
-        android:text="Ir a Equipos"
+        android:text="@string/ir_a_equipos"
+        android:drawableStart="@drawable/ic_equipos"
+        android:padding="10dp"
+        android:drawablePadding="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,7 +26,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="irAIncidenciasFragment"
-        android:text="Ir a Incidencias"
+        android:text="@string/ir_a_incidencias"
+        android:drawableStart="@drawable/ic_incidencias"
+        android:padding="10dp"
+        android:drawablePadding="10dp"
         app:layout_constraintTop_toBottomOf="@id/btnEquipos"
         app:layout_constraintBottom_toTopOf="@id/btnAlbaranes"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +40,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="irAAlbaranesFragment"
-        android:text="Ir a Albaranes"
+        android:text="@string/ir_a_albaranes"
+        android:drawableStart="@drawable/ic_albaranes"
+        android:padding="10dp"
+        android:drawablePadding="10dp"
         app:layout_constraintTop_toBottomOf="@id/btnIncidencias"
         app:layout_constraintBottom_toTopOf="@id/btnEspacios"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +54,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="irAEspaciosFragment"
-        android:text="Ir a Espacios"
+        android:text="@string/ir_a_espacios"
+        android:drawableStart="@drawable/ic_espacios"
+        android:padding="10dp"
+        android:drawablePadding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
