--- a/RevisionesApp/app/src/main/res/layout/activity_perfil_usuario.xml
+++ b/RevisionesApp/app/src/main/res/layout/activity_perfil_usuario.xml
@@ -1,151 +1,201 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.pfc.android.revisionesapp.models.PerfilUsuarioViewModel" />
     </data>
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp">
-
-        <TextView
-            android:id="@+id/tvProfileHeader"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Perfil de usuario"
-            android:textSize="24sp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"/>
+        android:id="@+id/perfilUsuarioActivity"
+        tools:context=".activities.PerfilUsuarioActivity"
+        android:paddingTop="20dp"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp">
 
         <ImageView
             android:id="@+id/ivProfilePicture"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_below="@id/tvProfileHeader"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="16dp"
-            android:src="@drawable/ic_perfil"/>
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:src="@drawable/ic_perfil"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/etNombre"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:hint="Nombre"
+            android:text="@={viewModel.userName}"
+            app:layout_constraintStart_toEndOf="@+id/ivProfilePicture"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/etApellido"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:hint="Apellido"
+            android:text="@={viewModel.userSurname}"
+            app:layout_constraintStart_toEndOf="@id/ivProfilePicture"
+            app:layout_constraintTop_toBottomOf="@id/etNombre" />
+
+        <EditText
+            android:id="@+id/etRol"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:enabled="false"
+            android:hint="Rol"
+            android:text="@={viewModel.userRole}"
+            android:layout_marginStart="20dp"
+            app:layout_constraintTop_toBottomOf="@id/etApellido"
+            app:layout_constraintStart_toEndOf="@id/ivProfilePicture" />
 
         <TextView
-            android:id="@+id/tvInfoHeader"
+            android:id="@+id/tvId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Información"
-            android:textSize="18sp"
-            android:layout_below="@id/ivProfilePicture"
-            android:layout_marginTop="16dp"
-            android:layout_alignParentStart="true"/>
+            android:text="ID: "
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/ivProfilePicture"
+            app:layout_constraintStart_toStartOf="parent" />
 
-        <LinearLayout
-            android:id="@+id/llForm"
-            android:layout_width="match_parent"
+        <EditText
+            android:id="@+id/etId"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_below="@id/tvInfoHeader"
-            android:layout_marginTop="8dp">
-
-            <EditText
-                android:id="@+id/etId"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="ID"
-                android:enabled="false"
-                android:text="@={viewModel.userId}"/>
-
-            <EditText
-                android:id="@+id/etUsername"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Username"
-                android:text="@={viewModel.userUsername}"/>
-
-            <EditText
-                android:id="@+id/etName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Nombre"
-                android:text="@={viewModel.userName}"/>
-
-            <EditText
-                android:id="@+id/etSurname"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Apellido"
-                android:text="@={viewModel.userSurname}"/>
-
-            <EditText
-                android:id="@+id/etBirthdate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Fecha de nacimiento"
-                android:text="@={viewModel.userBirthdate}"/>
-
-            <EditText
-                android:id="@+id/etRole"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Rol"
-                android:enabled="false"
-                android:text="@={viewModel.userRole}"/>
-
-            <EditText
-                android:id="@+id/etPhone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Teléfono"
-                android:text="@={viewModel.userPhone}"/>
-
-            <EditText
-                android:id="@+id/etEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Correo Electrónico"
-                android:text="@={viewModel.userEmail}"/>
-
-            <EditText
-                android:id="@+id/etPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Contraseña"
-                android:inputType="textPassword"
-                android:text="@={viewModel.userPassword}"/>
-
-        </LinearLayout>
+            android:enabled="false"
+            android:hint="ID"
+            android:text="@={viewModel.userId}"
+            app:layout_constraintTop_toBottomOf="@id/ivProfilePicture"
+            app:layout_constraintStart_toEndOf="@id/tvId" />
 
         <TextView
-            android:id="@+id/tvOptions"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Opciones"
-            android:textSize="18sp"
-            android:layout_below="@id/llForm"
-            android:layout_marginTop="16dp"
-            android:layout_alignParentStart="true"/>
-
-        <LinearLayout
+            android:id="@+id/tvUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_below="@id/tvOptions"
-            android:layout_marginTop="8dp">
+            android:text="Username"
+            android:layout_marginTop="70dp"
+            app:layout_constraintTop_toBottomOf="@id/ivProfilePicture"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-            <Button
-                android:id="@+id/btnLogout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Cerrar sesión"/>
+        <EditText
+            android:id="@+id/etUsername"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Username"
+            android:text="@={viewModel.userUsername}"
+            app:layout_constraintTop_toBottomOf="@id/tvUsername"/>
 
-            <Button
-                android:id="@+id/btnEditProfile"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Editar perfil"/>
-        </LinearLayout>
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/tvFechaNacimiento"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Fecha de nacimiento"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/etUsername"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <EditText
+            android:id="@+id/etFechaNacimiento"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Fecha de nacimiento"
+            android:text="@={viewModel.userBirthdate}"
+            app:layout_constraintTop_toBottomOf="@id/tvFechaNacimiento"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/tvEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Correo Electrónico"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/etFechaNacimiento"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <EditText
+            android:id="@+id/etEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Correo Electrónico"
+            android:text="@={viewModel.userEmail}"
+            app:layout_constraintTop_toBottomOf="@id/tvEmail"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/tvTelefono"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Teléfono"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/etEmail"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <EditText
+            android:id="@+id/etTelefono"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Teléfono"
+            android:text="@={viewModel.userPhone}"
+            app:layout_constraintTop_toBottomOf="@id/tvTelefono"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/tvPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Contraseña"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/etTelefono"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <EditText
+            android:id="@+id/etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Contraseña"
+            android:inputType="textPassword"
+            android:text="@={viewModel.userPassword}"
+            app:layout_constraintTop_toBottomOf="@id/tvPassword"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <Button
+            android:id="@+id/btnLogout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:text="Cerrar sesión"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/btnEditProfile"
+            app:layout_constraintTop_toBottomOf="@id/etPassword" />
+
+        <Button
+            android:id="@+id/btnEditProfile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:text="Editar perfil"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/etPassword"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
