--- a/RevisionesApp/app/src/main/res/layout/fragment_equipos.xml
+++ b/RevisionesApp/app/src/main/res/layout/fragment_equipos.xml
@@ -9,13 +9,18 @@
     android:id="@+id/equiposFragment"
     android:paddingTop="10dp"
     android:paddingStart="20dp"
-    android:paddingEnd="20dp">
+    android:paddingEnd="20dp"
+    android:paddingBottom="10dp"
+    android:background="#F4EEEA">
 
     <Button
         android:id="@+id/btnCrearEquipo"
+        android:textStyle="bold"
+        android:background="@drawable/botones"
+        android:textSize="10sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Agregar Equipo"
+        android:text="Nuevo Equipo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
@@ -23,25 +28,29 @@
         android:id="@+id/filtrarEquipoEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/edittext"
         android:singleLine="true"
         android:maxLines="1"
         android:imeOptions="actionDone"
-        android:background="@android:color/white"
         android:hint="Buscar equipo..."
-        android:minHeight="48dp"
+        android:minHeight="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:drawableStart="@drawable/ic_lupa"
+        android:drawablePadding="10dp"/>
 
     <LinearLayout
         android:id="@+id/headerEquipo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginTop="15dp"
         android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@+id/filtrarEquipoEditText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="#DFDCDC">
 
         <TextView
             android:layout_width="0dp"
@@ -55,7 +64,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
             android:text="Nombre"
             android:textSize="16sp"
             android:padding="4dp"
@@ -64,8 +73,8 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Tipo Producto"
+            android:layout_weight="0.9"
+            android:text="Producto"
             android:textSize="16sp"
             android:padding="4dp"
             android:textStyle="bold"/>
@@ -75,9 +84,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/equiposRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:background="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerEquipo" />
+        app:layout_constraintTop_toBottomOf="@+id/headerEquipo"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
