--- a/RevisionesApp/app/src/main/res/layout/item_equipo.xml
+++ b/RevisionesApp/app/src/main/res/layout/item_equipo.xml
@@ -2,37 +2,49 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="10dp">
 
-    <TextView
-        android:id="@+id/idEquipoTextView"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:padding="4dp"
-        android:textSize="16sp"
-        android:singleLine="true"
-        android:ellipsize="end"/>
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/nombreEquipoTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:padding="4dp"
-        android:textSize="16sp"
-        android:maxLines="3"
-        android:ellipsize="end"/>
+        <TextView
+            android:id="@+id/idEquipoTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:padding="4dp"
+            android:singleLine="true"
+            android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/tipoProductoEquipoTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="16sp"
-        android:padding="4dp"
-        android:singleLine="true"
-        android:ellipsize="end"/>
+        <TextView
+            android:id="@+id/nombreEquipoTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.5"
+            android:ellipsize="end"
+            android:maxLines="3"
+            android:padding="4dp"
+            android:textSize="11sp" />
+
+        <TextView
+            android:id="@+id/tipoProductoEquipoTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.9"
+            android:ellipsize="end"
+            android:padding="4dp"
+            android:singleLine="true"
+            android:textSize="11sp" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#DCDCDC"
+        android:layout_marginTop="10dp"/>
 
 </LinearLayout>
