--- a/RevisionesApp/app/src/main/res/navigation/main_graph.xml
+++ b/RevisionesApp/app/src/main/res/navigation/main_graph.xml
@@ -50,6 +50,9 @@
             android:id="@+id/action_incidenciasFragment_to_incidenciaDetailFragment"
             app:destination="@id/incidenciaDetailFragment"
             app:popUpTo="@id/incidenciasFragment"/>
+        <action
+            android:id="@+id/action_incidenciasFragment_to_nuevaIncidenciaDetailFragment"
+            app:destination="@id/nuevaIncidenciaDetailFragment" />
     </fragment>
     <fragment
         android:id="@+id/albaranesFragment"
@@ -69,10 +72,14 @@
     <fragment
         android:id="@+id/incidenciaDetailFragment"
         android:name="com.pfc.android.revisionesapp.fragments.IncidenciaDetailFragment"
-        android:label="IncidenciaDetailFragment" />
+        tools:layout="@layout/fragment_incidencia_detail">
+    </fragment>
+    <fragment
+        android:id="@+id/nuevaIncidenciaDetailFragment"
+        android:name="com.pfc.android.revisionesapp.fragments.NuevaIncidenciaDetailFragment"
+        tools:layout="@layout/fragment_incidencia_detail" />
     <activity
         android:id="@+id/perfilUsuarioActivity"
         android:name="com.pfc.android.revisionesapp.activities.PerfilUsuarioActivity"
-        android:label="PerfilUsuarioActivity" >
-    </activity>
+        android:label="PerfilUsuarioActivity"></activity>
 </navigation>
